<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.7"
        android:gravity="center"
        android:text="@string/choose_way"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openCamera"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/take_picture"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_menu_camera"
        app:iconPadding="16dp"
        app:iconTint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/openGallery"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/choose_from_gallery"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_menu_gallery"
        app:iconPadding="16dp"
        app:iconTint="@color/black" />

</LinearLayout>